src/objects/Support_Survey__c.object
<CustomObject>
    <description>Survey sent to customers on case close</description>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Owner of the case with which this response is associated.</inlineHelpText>
        <label>Case Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Support_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>Case with which this CSAT is associated</description>
        <inlineHelpText>Case with which this response is associated.</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Support Surveys</relationshipLabel>
        <relationshipName>Support_Surveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The support liaison who submitted this response.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Support Surveys</relationshipLabel>
        <relationshipName>Support_Surveys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DSI</label>
        <referenceTo>DSI__c</referenceTo>
        <relationshipLabel>Support Surveys</relationshipLabel>
        <relationshipName>Support_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Sender__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person who is being evaluated in the survey.</description>
        <inlineHelpText>The person who is being evaluated in the survey.</inlineHelpText>
        <label>Feedback For</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Support_Surveys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExpertNow_Satisfaction__c</fullName>
        <description>How satisfied are you with your experience with Expert.Now today?</description>
        <inlineHelpText>How satisfied are you with your experience with Expert.Now today?</inlineHelpText>
        <label>2. Satisfied with Expert.Now experience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delighted</fullName>
                </value>
                <value>
                    <fullName>Very Satisfied</fullName>
                </value>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Partially Satisfied</fullName>
                </value>
                <value>
                    <fullName>Unhappy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expert_Rating__c</fullName>
        <description>How satisfied are you with the helpfulness and expertise of your assigned Expert today?</description>
        <inlineHelpText>How satisfied are you with the helpfulness and expertise of your assigned Expert today?</inlineHelpText>
        <label>3. Satisfied with expertise</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delighted</fullName>
                </value>
                <value>
                    <fullName>Very Satisfied</fullName>
                </value>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Partially Satisfied</fullName>
                </value>
                <value>
                    <fullName>Unhappy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Likely_to_Reccomend__c</fullName>
        <description>Based on your experience with our Technical Support, how likely would you be to recommend us to a colleague or to another organization?</description>
        <inlineHelpText>Based on your experience with our Technical Support, how likely would you be to recommend us to a colleague or to another organization?</inlineHelpText>
        <label>Likely to Recommend</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very likely</fullName>
                </value>
                <value>
                    <fullName>Likely</fullName>
                </value>
                <value>
                    <fullName>Neutral/Not Sure</fullName>
                </value>
                <value>
                    <fullName>Unlikely</fullName>
                </value>
                <value>
                    <fullName>Very unlikely</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problem_Resolved__c</fullName>
        <description>Did we solve your problem today?</description>
        <inlineHelpText>Did we solve your problem today?</inlineHelpText>
        <label>1. Did we answer your question?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <description>Support Rating in a numeric value inputted by the support liaison answering the survey</description>
        <formula>VALUE( TEXT(Support_Rating__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has user responded to the survey</description>
        <inlineHelpText>Has user responded to the survey</inlineHelpText>
        <label>Responded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Satisfaction__c</fullName>
        <description>Was the issue resolved to your satisfaction?</description>
        <inlineHelpText>Was the issue resolved to your satisfaction?</inlineHelpText>
        <label>Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Satisfied</fullName>
                </value>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Unsatisfied</fullName>
                </value>
                <value>
                    <fullName>Very Unsatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Rating__c</fullName>
        <inlineHelpText>Rating Scale is 1 to 5 Stars</inlineHelpText>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Support Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Case_Owner__c</columns>
        <columns>Email_Sender__c</columns>
        <columns>Support_Rating__c</columns>
        <columns>Comments__c</columns>
        <columns>Contact_Survey__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>CSAT Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Surveys</pluralLabel>
    <recordTypes>
        <fullName>Expert_Now</fullName>
        <active>true</active>
        <description>Expert.now Survey</description>
        <label>Expert.Now</label>
    </recordTypes>
    <recordTypes>
        <fullName>Support_Survey</fullName>
        <active>true</active>
        <label>Support Survey</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>